--- a/style.css
+++ b/style.css
@@ -1,7 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 * {
 	padding: 0;
 	margin: 0;
 }
+:root {
+	/* Primary */
+	--red: hsl(0, 78%, 62%);
+	--cyan: hsl(180, 62%, 55%);
+	--orange: hsl(34, 97%, 64%);
+	--blue: hsl(212, 86%, 64%);
 
-.body {
+	/* Neutral */
+	--v-dark-blue: hsl(234, 12%, 34%);
+	--grayish-blue: hsl(229, 6%, 66%);
+	--v-light-gray: hsl(0, 0%, 98%);
+}
+body {
+	font-family: "Poppins", sans-serif;
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 1.5;
+	background-color: var(--v-light-gray);
+	color: var(--grayish-blue);
+}
+
+.header-text {
+	width: 30%;
+	margin: 3% auto;
+	text-align: center;
+}
+
+.head-first {
+	font-weight: 200;
+	color: var(--v-dark-blue);
+}
+
+.head-second {
+	color: var(--v-dark-blue);
 }
