--- a/style.css
+++ b/style.css
@@ -25,8 +25,10 @@ body {
 	color: var(--grayish-blue);
 }
 
+/* HEADER */
+
 .header-text {
-	width: 30%;
+	width: 33%;
 	margin: 3% auto;
 	text-align: center;
 }
@@ -38,4 +40,42 @@ body {
 
 .head-second {
 	color: var(--v-dark-blue);
+}
+
+/* MAIN */
+
+.grid-container {
+	width: 70%;
+	min-height: 70vh;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+}
+
+.box {
+	margin: 3%;
+	padding: 10%;
+	background-color: #fff;
+	box-shadow: 0 0 5px 1px;
+}
+
+.team-builder {
+	grid-column: 5 / span 4;
+	grid-row: span 2;
+}
+
+.supervisor {
+	grid-column: span 4;
+	grid-row: 2 / span 2;
+}
+
+.calculator {
+	grid-column: 9 / span 4;
+	grid-row: 2 / span 2;
+}
+
+.karma {
+	grid-column: 5 / span 4;
+	grid-row: 3 / span 2;
 }
