--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 }
 
 .box {
+	position: relative;
 	margin: 3%;
 	padding: 8%;
 	background-color: #fff;
@@ -68,8 +69,10 @@ body {
 	color: var(--v-dark-blue);
 }
 .icon {
-	float: right;
-	margin-top: 18%;
+	margin-top: 2%;
+	position: absolute;
+	right: 10%;
+	bottom: 10%;
 }
 
 .team-builder {
@@ -94,4 +97,29 @@ body {
 	grid-column: 5 / span 4;
 	grid-row: 3 / span 2;
 	border-color: var(--orange);
+}
+
+/* @MEDIA */
+
+@media screen and (max-width: 850px) {
+	.grid-container {
+		grid-template-rows: none;
+		grid-auto-rows: auto;
+	}
+	.supervisor {
+		grid-row: 1;
+		grid-column: 1 / span 6;
+	}
+	.team-builder {
+		grid-row: 1;
+		grid-column: span 6;
+	}
+	.karma {
+		grid-row: 2;
+		grid-column: 1 / span 6;
+	}
+	.calculator {
+		grid-row: 2;
+		grid-column: span 6;
+	}
 }
